-webkit-appearance none to fix button styles on iOS

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -185,6 +185,7 @@ form {
   
   background-image: none;
   white-space: nowrap;
+  -webkit-appearance: none;
   cursor: pointer;
 }
 
